--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,5 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -24,15 +10,35 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.header, .footer {
+  flex: 1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+section {
+  flex: 3
+}
+
+.title {
+  margin-bottom: 2em;
+  font-size: larger;
+}
+
+.keyboard {
+  width: 30vh;
+}
+
+.keyboard > * {
+  font-size: 1.8em;
+}
+
+.word {
+  letter-spacing: 0.4em;
+  font-size: 2em;
+  margin: 1em;
+  margin-right: 0.6em;
+}
+
+.clue {
+  font-size: 0.8em;
+  margin: 2em;
 }
