--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,16 @@
+body  {
+  background-color: #282c34;
+  color: white;
+}
+
 .App {
   text-align: center;
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 0 auto;
 }
 
 .header, .footer {
@@ -24,7 +27,8 @@ section {
 }
 
 .keyboard {
-  width: 30vh;
+  width: 300px;
+  margin: 0 auto;
 }
 
 .keyboard > * {
